manager/templates/default/css/login.css
html {
    font-size: 100.01%; /* avoids obscure font-size bug */
    line-height: 1.5; /* http://meyerweb.com/eric/thoughts/2006/02/08/unitless-line-heights/ */
    font-family: "Lucida Grande", Helvetica, Arial, sans-serif !important; /* IE ignores this and renders Arial better */
    font-family: Arial, Tahoma, Helvetica, sans-serif;
    color: #111;
    height: auto;
    background-color: #f7f7f7;
}
body {
    font-size: 75%; /* 12px 62.5% for 10px*/
    background-color: #f7f7f7;
    height: auto;
}

.warning { color: #821517; font-weight: bold; }
.success { color: #090; font-weight: bold; }

#container {
    margin: 70px auto 0;
    width: 460px;
}

#modx-login-logo {
    margin-bottom: 3px;
}
#modx-login-logo img {
    width: 180px;
}
#modx-panel-login-div {
    border: 1px solid #e0e0e0;
}
img.loginCaptcha {
    border: 1px solid #039;
    width: 148px;
    height: 60px;
}
.loginLicense {
    width: 460px;
    color: #555;
    margin: 0 auto;
    font-size: 90%;
    padding-left: 20px;
}

#modx-login-form-panel {
    border: 1px solid #ddd;
}
.x-panel-tl, .x-panel-tl .x-panel-header { 
    padding: 3px 5px;
    border: 0;
    font-size: 14px;
} 

.x-panel-ml, .x-panel-mr, .x-panel-mc {
    border: 0;
    background-color: transparent;
}

.login-form-bwrap {
    padding: 5px;
    background-color: white;
    color: #eee;
    -moz-border-radius: 10px;
    -webkit-border-radius:10px;
    border-radius: 10px;
}
.login-form-bwrap-padding {
    background: url(../images/restyle/header-partner.jpeg) top left;
    -moz-border-radius: 5px;
    -webkit-border-radius:5px;
    border-radius: 5px;
    padding-bottom: 10px;
}
h2 {
    color: #eee;
}

.x-panel-ml {
    padding: 10px 20px 22px;
    border-top: 1px solid #e4e4e4;
}
/* Fix styles because buttons are generated by extjs */
.x-btn button {
    height: 28px !important;
	padding: 3px 10px 0 !important;
	font-size: 12px;
}
.x-btn:hover {
    background:#dfdfdf;
    background:-moz-linear-gradient(center bottom,#dfdfdf 0%,#ffffff 100%) repeat scroll 0 0 transparent;
    background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#ffffff),color-stop(100%,#dfdfdf));
    background:-webkit-linear-gradient(center bottom,#dfdfdf 0%,#ffffff 100%);
    background:-o-linear-gradient(center bottom,#dfdfdf 0%,#ffffff 100%);
    background:-ms-linear-gradient(center bottom,#dfdfdf 0%,#ffffff 100%);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff,endColorstr=#dfdfdf,GradientType=0);
    background:linear-gradient(center bottom,#dfdfdf 0%,#ffffff 100%);
    border:1px solid #9caf78;
}
.x-btn:hover button {
    color:#636F4C;
    text-shadow:0 1px 0 #ffffff;
}
.x-btn:active {
    -moz-box-shadow:0 0 3px #aaaaaa inset;
    -webkit-box-shadow:0 0 3px #aaaaaa inset;
    -o-box-shadow:0 0 3px #aaaaaa inset;
    box-shadow:0 0 3px #aaaaaa inset;
    background-color:#ffffff;
    background-image:none;
    margin:0 1px;
	border-color: #CFCFCF #C0C0C0 #AAAAAA;
}

.modx-forgot-login {
    float: left;
    padding-top: 4px;
}
a {
    text-decoration: none;
    color: #bbb;
}
a:hover {
    text-decoration: underline;
}

#modx-login-email { width: 200px; }

#modx-panel-login-div {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background-color: white;
}
label { cursor: pointer; }

.login-form-item {
    float: left;
    margin: 0;
}
.login-form-item-first {
    margin-right: 4px;
}
.login-form-element {
    padding: 0;
}
.login-form-element .x-form-text {
    padding: 8px;
    width: 181px;
}

.login-cb-row {
    padding: 9px 0 0 0;
}
.x-form-check-wrap .x-form-cb-label {
    color: #bbb;
}
.modx-login-fl-link {
    height: auto !important;
    line-height: 18px;
    cursor: pointer;
    float: right;
    margin: 2px 102px 0 0;
}
.login-form-btn {
    padding: 8px 18px;
    background: #eee;
    font: bold 13px arial, tahoma, helvetica, sans-serif;
    color: #555;
    border: 2px solid #ddd;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    -moz-box-shadow:rgba(0,0,0,0.2) 0 0 1px;
    -webkit-box-shadow:rgba(0,0,0,0.2) 0 0 1px;
    -o-box-shadow:rgba(0,0,0,0.2) 0 0 1px;
    box-shadow:rgba(0,0,0,0.2) 0 0 1px;
    background: url(../images/modx-theme/form/button-bg.png) repeat-x scroll 0 bottom #DCDCDC;
    background:-moz-linear-gradient(center bottom,#dcdcdc 0%,#fcfcfc 100%) repeat scroll 0 0 transparent;
    background:-webkit-gradient(linear,left top,left bottom,color-stop(0%,#fcfcfc),color-stop(100%,#dcdcdc));
    background:-webkit-linear-gradient(center bottom,#dcdcdc 0%,#fcfcfc 100%);
    background:-o-linear-gradient(center bottom,#dcdcdc 0%,#fcfcfc 100%);
    background:-ms-linear-gradient(center bottom,#dcdcdc 0%,#fcfcfc 100%);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#fcfcfc,endColorstr=#dcdcdc,GradientType=0);
    background:linear-gradient(center bottom,#dcdcdc 0%,#fcfcfc 100%);
}

#modx-login-btn {
    float: right;
}
#modx-login-btn:hover {
    background: #ddd;
}

#modx-fl-btn {
    margin-left: 0;
}

.x-panel-mr {
    padding-right: 0;
}
.x-panel-mc {
    padding: 10px 0;
}

